Support aggregations min, max (#541)
* Support aggregations min, max

* update

* support string in max and min

* update

* update

* added min/max support for date, datetime, time, timestamp types

* address comments

* update

* update

* address comment

* add comparison tests

* update

* added doc