@@ -23,6 +23,7 @@ import com.google.common.collect.ImmutableMap;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 public class AggregationTest extends ExpressionTestBase {
 
@@ -38,9 +39,13 @@ public class AggregationTest extends ExpressionTestBase {
                   .put("boolean_value", true)
                   .put("struct_value", ImmutableMap.of("str", 1))
                   .put("array_value", ImmutableList.of(1))
+                  .put("date_value", "2000-01-01")
+                  .put("datetime_value", "2020-01-01 12:00:00")
+                  .put("time_value", "12:00:00")
+                  .put("timestamp_value", "2020-01-01 12:00:00")
                   .build()),
           ExprValueUtils.tupleValue(
-              ImmutableMap.of(
+              Map.of(
                   "integer_value",
                   1,
                   "long_value",
@@ -50,9 +55,17 @@ public class AggregationTest extends ExpressionTestBase {
                   "double_value",
                   1d,
                   "float_value",
-                  1f)),
+                  1f,
+                  "date_value",
+                  "2020-01-01",
+                  "datetime_value",
+                  "2020-01-01 00:00:00",
+                  "time_value",
+                  "00:00:00",
+                  "timestamp_value",
+                  "2020-01-01 00:00:00")),
           ExprValueUtils.tupleValue(
-              ImmutableMap.of(
+              Map.of(
                   "integer_value",
                   3,
                   "long_value",
@@ -62,19 +75,35 @@ public class AggregationTest extends ExpressionTestBase {
                   "double_value",
                   3d,
                   "float_value",
-                  3f)),
+                  3f,
+                  "date_value",
+                  "1970-01-01",
+                  "datetime_value",
+                  "1970-01-01 19:00:00",
+                  "time_value",
+                  "19:00:00",
+                  "timestamp_value",
+                  "1970-01-01 19:00:00")),
           ExprValueUtils.tupleValue(
-              ImmutableMap.of(
+              Map.of(
                   "integer_value",
                   4,
                   "long_value",
                   4L,
                   "string_value",
-                  "f",
+                  "n",
                   "double_value",
                   4d,
                   "float_value",
-                  4f)));
+                  4f,
+                  "date_value",
+                  "2040-01-01",
+                  "datetime_value",
+                  "2040-01-01 07:00:00",
+                  "time_value",
+                  "07:00:00",
+                  "timestamp_value",
+                  "2040-01-01 07:00:00")));
 
   protected static List<ExprValue> tuples_with_null_and_missing =
       Arrays.asList(
@@ -83,6 +112,12 @@ public class AggregationTest extends ExpressionTestBase {
           ExprValueUtils.tupleValue(
               ImmutableMap.of("integer_value", 1, "string_value", "f", "double_value", 4d)),
           ExprValueUtils.tupleValue(Collections.singletonMap("double_value", null)));
+
+  protected static List<ExprValue> tuples_with_all_null_or_missing =
+      Arrays.asList(
+          ExprValueUtils.tupleValue(Collections.singletonMap("integer_value", null)),
+          ExprValueUtils.tupleValue(Collections.singletonMap("double", null)),
+          ExprValueUtils.tupleValue(Collections.singletonMap("string_value", null)));
 
   protected ExprValue aggregation(Aggregator aggregator, List<ExprValue> tuples) {
     AggregationState state = aggregator.create();
